css fix on French version: align social medias w/ terms of service

--- a/fr/fr-style.css
+++ b/fr/fr-style.css
@@ -5,3 +5,4 @@ h1{width:588px;}
 #privacy{padding-top:77px;}
 #privacy-icon{margin-top:42px;}
 #video-text h2{margin-top:5px;}
+#social-medias{margin-left:29px;}
